# aadhaar-chain

./: .gitignore  .mcp.json  Anchor.toml  CLAUDE.md  MEMORY.md  README-test.md  render.yaml
.claude/: CLAUDE.md  settings.json
.claude/commands/: automate-flow.md
.claude/config/: project.json
.claude/hooks/: auto-load-orchestrator.sh
.claude/progress/: claude-progress.txt  feat-010.md  feature-list.json  file_history.json  session-state.json  state.json
.claude/scripts/: README.md  health-check.sh  render-deploy.sh  restart-servers.sh  update-feature.sh
.summary/: AI-TRUE-USE-CASES.md  DECISIONS-2025-01-02.md  DESIGN-v2.md  PURPOSE.md  TOKENIZATION-OPPORTUNITY.md  agent-first-aadhar-solana-platform.md  anthropic-harness-research.md  design-v3.md  implementation-plan-backend.md  session_2026-01-03_agent-harness-v3.md
.traces/chroma/: chroma.sqlite3
frontend/: .deploy-info  netlify.toml  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/hooks/: useApiCall.ts
frontend/lib/: api.ts  credentials.ts  types.ts  wallet.tsx
frontend/public/: preview.html
frontend/stores/: credentials.ts  toast.ts  wallet.ts
gateway/: .dockerignore  .env.example  Dockerfile  __init__.py  alembic.ini  config.py  database.py  db_base.py  db_models.py  main.py  requirements.txt
gateway/alembic/: env.py
gateway/app/: agent_manager.py  mcp_client.py  models.py  (+3 more)
mcp/: agents.py  registry.py
programs/identity-core/: Cargo.toml
programs/identity-core/src/: lib.rs
scripts/: init.sh  run-tests.sh  start-gateway.sh  stop-gateway.sh
(+73 files in other folders)
