[package]
name = "identity-core"
version = "0.1.0"
description = "Identity Core program for Self-Sovereign Identity on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "identity_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.0"
